--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">SilentInstallation</string>
     <string name="install">安装</string>
     <string name="uinstall">卸载</string>
-    <string name="pathOrPackageName">输入安装路径或者报名</string>
+    <string name="pathOrPackageName">输入安装路径(默认sdcard)或者包名</string>
     <string name="error">An error occurred. Check the logcat.</string>
 
 </resources>
